--- a/app/app/index.html
+++ b/app/app/index.html
@@ -19,22 +19,33 @@
       </path>
     </svg>
   </div>
-  <header class="header">
+  <header class="header ">
     <div class="header__container container">
       <div class="header__burger-inner">
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
         <a href="" class="header__text">
-          <h3 class="header__title title">
+          <h3 class="header__title ">
             Семейный портал
           </h3>
-          <p class="header__subtitle subtitle">
+          <p class="header__subtitle ">
             Республика Мордовия
           </p>
         </a>
-        <div class="header__burger-burger">
-          <span></span>
+        <div class="header__nav-inner">
+          <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
         </div>
+        <div class="header__burger-partners-inner">
+          <div class="header__burger-partners">
+            <h6 class="header__burger-partners-title">
+              Партнёры
+            </h6>
+          </div>
+          <div class="header__burger-burger">
+            <span></span>
+          </div>
+        </div>
+        
         </div>
         <div class="header__burger-hide">
           <div class="header__photos">
@@ -46,7 +57,6 @@
           <div class="header__items__inner">
             <div class="header__items">
               <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
-              <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
             </div>
             <input type="text" class="header__search-input" placeholder="Искать">
           </div>
@@ -56,10 +66,10 @@
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
         <div class="header__text">
-          <h3 class="header__title title">
+          <h3 class="header__title ">
             Семейный портал
           </h3>
-          <p class="header__subtitle subtitle">
+          <p class="header__subtitle ">
             Республика Мордовия
           </p>
         </div>
@@ -73,7 +83,7 @@
         <div class="header__items__inner">
           <div class="header__items">
             <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
-            <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
+            <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
           </div>
           <input type="text" class="header__search-input" placeholder="Искать">
         </div>
@@ -83,8 +93,8 @@
   <section class="slider">
     
     <div class="slider__container">
-      <div class="slider__item slider__item-1" style="background-image: url(img/slider-img-1.jpg);">
-          <div class="slider__inner">
+      <div class="slider__item slider__item-1 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-1.jpg);">
+          <div class="slider__inner  ">
             <div class="slider__text">
               <h3 class="slider__subtitle subtitle">Демографическая политика</h3>
               <h2 class="slider__title title">России быть!</h2>
@@ -92,7 +102,7 @@
             <a class="slider__btn" href="#">Подробнее</a>
           </div>
       </div>
-      <div class="slider__item slider__item-2" style="background-image: url(img/slider-img-2.jpg);">
+      <div class="slider__item slider__item-2 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="3.5s"  style="background-image: url(img/slider-img-2.jpg);">
         <div class="slider__inner">
           <div class="slider-text">
             <h3 class="slider__subtitle subtitle">Семейная политика:</h3>
@@ -101,7 +111,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-3" style="background-image: url(img/slider-img-3.jpg);">
+      <div class="slider__item slider__item-3 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-3.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h5 class="slider__uptite title">Деятельность общественных объединений и СО НКО</h5>
@@ -111,7 +121,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-4" style="background-image: url(img/slider-img-4.jpg);">
+      <div class="slider__item slider__item-4 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-4.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h5 class="slider__uptite title">КОНЦЕПЦИЯ государственной семейной политики 
@@ -122,7 +132,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-5" style="background-image: url(img/slider-img-5.jpg);">
+      <div class="slider__item slider__item-5 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-5.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h3 class="slider__subtitle subtitle">Истории успешных </h3>
@@ -131,7 +141,7 @@
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
-      <div class="slider__item slider__item-6" style="background-image: url(img/slider-img-6.jpg);">
+      <div class="slider__item slider__item-6 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-6.jpg);">
         <div class="slider__inner">
           <div class="slider__text">
             <h3 class="slider__subtitle subtitle">Семейный кодекс Российской Федерации </h3>
@@ -167,7 +177,7 @@
       <div class="news__inner">
         <div class="news__item">
           <img  alt="" src="img/news-1.jpg" class="news__item-img">
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
           <p class="news__item-text text">
@@ -182,7 +192,7 @@
         </div>
         <div class="news__item">
           <img alt="" src="img/news-2.jpg" class="news__item-img">
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира  
           </div>
           <p class="news__item-text text">
@@ -197,7 +207,7 @@
         </div>
         <div class="news__item">
           <img alt="" src="img/news-3.jpg" class="news__item-img">
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Дом – музей М.А. Ульянова можно будет посетить из любого уголка мира 
           </div>
           <p class="news__item-text text">
@@ -235,7 +245,7 @@
       <h2 class="important__title title">Важные события</h2>
       <div class="important__inner">
         <div class="important__item-big important__item-big-1" style="background-image: url(img/important-1.jpg);">
-          <h5 class="important__item-big-title title">
+          <h5 class="important__item-big-title">
             Занятия и игры для детей
           </h5>
           <div class="important__item-big-text">
@@ -286,7 +296,7 @@
           </div>
         </div>
         <div class="important__item-big" style="background-image: url(img/important-6.jpg);">
-          <h5 class="important__item-big-title title">
+          <h5 class="important__item-big-title">
             Новости по мерам социальной поддержки
           </h5>
           <div class="important__item-big-text title">  
@@ -314,7 +324,7 @@
         <div class="news__item">
           <img alt="" src="img/info-1.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Бюджетирование. Личный бюджет  
           </div>
           <p class="news__item-text text">
@@ -325,7 +335,7 @@
         <div class="news__item">
           <img alt="" src="img/info-2.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Бюджетирование. Личный бюджет  
           </div>
           <p class="news__item-text text">
@@ -336,7 +346,7 @@
         <div class="news__item">
           <img alt="" src="img/info-3.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Бюджетирование. Личный бюджет  
           </div>
           <p class="news__item-text text">
@@ -347,7 +357,7 @@
         <div class="news__item">
           <img alt="" src="img/info-4.jpg" class="news__item-img">
           <div class="info__date">3 июня 2020 г.</div>
-          <div class="news__item-title title">
+          <div class="news__item-title">
             Бюджетирование. Личный бюджет  
           </div>
           <p class="news__item-text text">
