--- a/app/app/article.html
+++ b/app/app/article.html
@@ -17,22 +17,33 @@
       </path>
     </svg>
   </div>
-  <header class="header">
+  <header class="header ">
     <div class="header__container container">
       <div class="header__burger-inner">
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
         <a href="" class="header__text">
-          <h3 class="header__title title">
+          <h3 class="header__title ">
             Семейный портал
           </h3>
-          <p class="header__subtitle subtitle">
+          <p class="header__subtitle ">
             Республика Мордовия
           </p>
         </a>
-        <div class="header__burger-burger">
-          <span></span>
+        <div class="header__nav-inner">
+          <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
         </div>
+        <div class="header__burger-partners-inner">
+          <div class="header__burger-partners">
+            <h6 class="header__burger-partners-title">
+              Партнёры
+            </h6>
+          </div>
+          <div class="header__burger-burger">
+            <span></span>
+          </div>
+        </div>
+        
         </div>
         <div class="header__burger-hide">
           <div class="header__photos">
@@ -44,7 +55,6 @@
           <div class="header__items__inner">
             <div class="header__items">
               <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
-              <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
             </div>
             <input type="text" class="header__search-input" placeholder="Искать">
           </div>
@@ -54,10 +64,10 @@
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
         <div class="header__text">
-          <h3 class="header__title title">
+          <h3 class="header__title ">
             Семейный портал
           </h3>
-          <p class="header__subtitle subtitle">
+          <p class="header__subtitle ">
             Республика Мордовия
           </p>
         </div>
@@ -71,13 +81,21 @@
         <div class="header__items__inner">
           <div class="header__items">
             <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
-            <a href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></a>
+            <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
           </div>
           <input type="text" class="header__search-input" placeholder="Искать">
         </div>
       </div>
     </div>
   </header>
+    <div class="breadcrumbs">
+      <div class="breadcrumbs__container container">
+        <ol class="breadcrumbs__inner">
+          <li class="breadcrumbs__item"><a href="./index.html"><span>Главная</span></a></li>
+          <li class="breadcrumbs__item breadcrumbs__item-last"><a href=""><span>Статья №1</span></a></li>
+        </ol>
+      </div>
+    </div>
   <section class="article">
     <div class="article__container container">
       <div class="article__inner">
