--- a/app/app/index.html
+++ b/app/app/index.html
@@ -262,7 +262,7 @@
         <div class="important__item">
           <img src="img/important-2.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
-            <h1 class="important__item-subtitle title">Полезная информация</h1>
+            <h1 class="important__item-subtitle">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
             <h4 class="important__item-title title">1 июня состоится прямой эфир, посвященный</h4>
             <div class="important__item-text text">В первый день лета традиционно отмечается очень важный праздник – Международный день защиты детей</div>
@@ -271,7 +271,7 @@
         <div class="important__item">
           <img src="img/important-3.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
-            <h1 class="important__item-subtitle title">Полезная информация</h1>
+            <h1 class="important__item-subtitle">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
             <h4 class="important__item-title title">1 июня состоится прямой эфир, посвященный</h4>
             <div class="important__item-text text">В первый день лета традиционно отмечается очень важный праздник – Международный день защиты детей</div>
@@ -280,7 +280,7 @@
         <div class="important__item">
           <img src="img/important-4.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
-            <h1 class="important__item-subtitle title">Полезная информация</h1>
+            <h1 class="important__item-subtitle">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
             <h4 class="important__item-title title">1 июня состоится прямой эфир, посвященный</h4>
             <div class="important__item-text text">В первый день лета традиционно отмечается очень важный праздник – Международный день защиты детей</div>
@@ -289,7 +289,7 @@
         <div class="important__item">
           <img src="img/important-5.jpg" alt="photo" class="important__item-img">
           <div class="important__item-inner">
-            <h1 class="important__item-subtitle title">Полезная информация</h1>
+            <h1 class="important__item-subtitle">Полезная информация</h1>
             <p class="important__item-mounth">3 июня 2020 г.</p>
             <h4 class="important__item-title title">1 июня состоится прямой эфир, посвященный</h4>
             <div class="important__item-text text">В первый день лета традиционно отмечается очень важный праздник – Международный день защиты детей</div>
