--- a/app/app/index.html
+++ b/app/app/index.html
@@ -96,7 +96,7 @@
       <div class="slider__item slider__item-1 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-1.jpg);">
           <div class="slider__inner  ">
             <div class="slider__text">
-              <h3 class="slider__subtitle subtitle">Демографическая политика</h3>
+              <h3 class="slider__subtitle subtitle">Демографическая политика:</h3>
               <h2 class="slider__title title">России быть!</h2>
             </div>
             <a class="slider__btn" href="#">Подробнее</a>
