--- a/app/app/app/index.html
+++ b/app/app/app/index.html
@@ -377,7 +377,7 @@
           <input type="text" class="form__input" placeholder="Ваш email" >
           <textarea class="form__input form__input-big" placeholder="Вашe сообщение"></textarea>
         </div>
-        <button type="submit" class="form__btn" disabled="" value="Подробнее">Подробнее</button>
+        <button type="submit" class="form__btn submit" disabled="" value="Подробнее" name="submit">Подробнее</button>
         <div class="form__submit-input">
           <div class="g-recaptcha" data-sitekey="6LeKaREUAAAAALB6Sgjp5XqHq0Kb_aLEn_KORz6u"></div>
           <div class="submit__inner">
