--- a/app/app/app/index.html
+++ b/app/app/app/index.html
@@ -12,11 +12,8 @@
   
 </head>
 <body>
-  <div class="preloader">
-    <div class="preloader__row">
-      <div class="preloader__item"></div>
-      <div class="preloader__item"></div>
-    </div>
+  <div class="loader_bg">
+    <div class="loader"></div>
   </div>
   <header class="header ">
     <div class="header__container container">
