--- a/app/app/app/article.html
+++ b/app/app/app/article.html
@@ -10,11 +10,8 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <div class="preloader">
-    <div class="preloader__row">
-      <div class="preloader__item"></div>
-      <div class="preloader__item"></div>
-    </div>
+  <div class="loader_bg">
+    <div class="loader"></div>
   </div>
   <header class="header ">
     <div class="header__container container">
