--- a/app/app/index.html
+++ b/app/app/index.html
@@ -12,12 +12,8 @@
   
 </head>
 <body>
-  <div class="preloader">
-    <svg class="preloader__image" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-      <path fill="currentColor"
-        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z">
-      </path>
-    </svg>
+  <div class="loader_bg">
+    <div class="loader"></div>
   </div>
   <header class="header ">
     <div class="header__container container">
@@ -94,58 +90,58 @@
     
     <div class="slider__container">
       <div class="slider__item slider__item-1 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-1.jpg);">
-          <div class="slider__inner  ">
+          <div class="slider__inner   ">
             <div class="slider__text">
-              <h3 class="slider__subtitle subtitle">Демографическая политика:</h3>
-              <h2 class="slider__title title">России быть!</h2>
+              <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Демографическая политика:</h3>
+              <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">России быть!</h2>
             </div>
             <a class="slider__btn" href="#">Подробнее</a>
           </div>
       </div>
       <div class="slider__item slider__item-2 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="3.5s"  style="background-image: url(img/slider-img-2.jpg);">
-        <div class="slider__inner">
+        <div class="slider__inner ">
           <div class="slider-text">
-            <h3 class="slider__subtitle subtitle">Семейная политика:</h3>
-            <h2 class="slider__title title">Многодетная семья в тренде!</h2>
+            <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Семейная политика:</h3>
+            <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">Многодетная семья в тренде!</h2>
           </div>
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-3 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-3.jpg);">
-        <div class="slider__inner">
+        <div class="slider__inner ">
           <div class="slider__text">
             <h5 class="slider__uptite title">Деятельность общественных объединений и СО НКО</h5>
-            <h3 class="slider__subtitle subtitle">Наша миссия</h3>
-            <h2 class="slider__title title">это защита и укрепление семьи и традиционных семейных ценностей</h2>
+            <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Наша миссия</h3>
+            <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">это защита и укрепление семьи и традиционных семейных ценностей</h2>
           </div>
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-4 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-4.jpg);">
-        <div class="slider__inner">
+        <div class="slider__inner ">
           <div class="slider__text">
             <h5 class="slider__uptite title">КОНЦЕПЦИЯ государственной семейной политики 
               в Российской Федерации на период до 2025 года</h5>
-            <h3 class="slider__subtitle subtitle">Поддержка и защита семьи</h3>
-            <h2 class="slider__title title">как фундаментальной основы российского общества, сохранение традиционных семейных ценностей, повышение роли семьи в жизни общества</h2>
+            <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Поддержка и защита семьи</h3>
+            <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">как фундаментальной основы российского общества, сохранение традиционных семейных ценностей, повышение роли семьи в жизни общества</h2>
           </div>
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-5 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-5.jpg);">
-        <div class="slider__inner">
+        <div class="slider__inner ">
           <div class="slider__text">
-            <h3 class="slider__subtitle subtitle">Истории успешных </h3>
-          <h2 class="slider__title title">и знаменитых людей из многодетных семей. Они родились третьими, ... пятыми, ...семнадцатами...</h2>
+            <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Истории успешных </h3>
+          <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">и знаменитых людей из многодетных семей. Они родились третьими, ... пятыми, ...семнадцатами...</h2>
           </div>
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
       </div>
       <div class="slider__item slider__item-6 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="2.5s"  style="background-image: url(img/slider-img-6.jpg);">
-        <div class="slider__inner">
+        <div class="slider__inner ">
           <div class="slider__text">
-            <h3 class="slider__subtitle subtitle">Семейный кодекс Российской Федерации </h3>
-          <h2 class="slider__title title">Семейный кодекс РФ — это первый в истории страны федеральный закон, который целиком и полностью посвящён семье, факторам ей формирования, сохранения и поддержания</h2>
+            <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Семейный кодекс Российской Федерации </h3>
+          <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">Семейный кодекс РФ — это первый в истории страны федеральный закон, который целиком и полностью посвящён семье, факторам ей формирования, сохранения и поддержания</h2>
           </div>
           <a class="slider__btn" href="#">Подробнее</a>
         </div>
@@ -378,8 +374,16 @@
           <input type="text" class="form__input" placeholder="Ваш email" >
           <textarea class="form__input form__input-big" placeholder="Вашe сообщение"></textarea>
         </div>
-        <button type="submit" class="form__btn">Подробнее</button>
+        <button type="submit" class="form__btn submit" disabled="" value="Отправить" name="submit">Подробнее</button>
+        <div class="form__submit-input">
+          <div class="g-recaptcha" data-sitekey="6LeKaREUAAAAALB6Sgjp5XqHq0Kb_aLEn_KORz6u"></div>
+          <div class="submit__inner">
+            <input type="checkbox" id="politics" onclick="check();" value="" autocomplete="off">
+          Нажимая на кнопку "Отправить заказ", я даю <a href="ссылка на страницу согласия"> согласие на обработку персональных данных.</a>
+          </div>
+        </div>
       </form>
+      
     </div>
   </section>
   <footer class="footer" style="background-image: url(img/footer-img.jpg);">
@@ -396,5 +400,6 @@
   <script src="js/bvi.min.js"></script>
   <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 </body>
 </html>
