--- a/app/app/app/index.html
+++ b/app/app/app/index.html
@@ -20,7 +20,7 @@
       <div class="header__burger-inner">
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
-        <a href="" class="header__text">
+        <a href="#" class="header__text">
           <h3 class="header__title ">
             Семейный портал
           </h3>
@@ -179,8 +179,8 @@
           <p class="news__item-text text">
             Дом-музей семьи Ульяновых передан на праве оперативного управления Северному драматическому театру им. М.А. Ульянова. Директор Северного драматического театра им. М.А. Ульянова Анджей Неупокоев сообщил, что …
           </p>
-          <a href="" class="news__item-link">Полезная информация</a>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-link">Полезная информация</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
           <div class="news__item-date">
             <p class="news__item-date-num">03</p>
             <p class="news__item-date-mounth">Июня</p>
@@ -194,8 +194,8 @@
           <p class="news__item-text text">
             Дом-музей семьи Ульяновых передан на праве оперативного управления Северному драматическому театру им. М.А. Ульянова. Директор Северного драматического театра им. М.А. Ульянова Анджей Неупокоев сообщил, что …
           </p>
-          <a href="" class="news__item-link">Куда сходить с ребенком</a>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-link">Куда сходить с ребенком</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
           <div class="news__item-date">
             <p class="news__item-date-num">06</p>
             <p class="news__item-date-mounth">августа</p>
@@ -210,7 +210,7 @@
             Дом-музей семьи Ульяновых передан на праве оперативного управления Северному драматическому театру им. М.А. Ульянова. Директор Северного драматического театра им. М.А. Ульянова Анджей Неупокоев сообщил, что …
           </p>
           <a href="#" class="news__item-link">Куда сходить с ребенком</a>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
           <div class="news__item-date">
             <p class="news__item-date-num">03</p>
             <p class="news__item-date-mounth">Июня</p>
@@ -326,7 +326,7 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
           <img alt="" src="img/info-2.jpg" class="news__item-img">
@@ -337,7 +337,7 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
           <img alt="" src="img/info-3.jpg" class="news__item-img">
@@ -348,7 +348,7 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
         </div>
         <div class="news__item">
           <img alt="" src="img/info-4.jpg" class="news__item-img">
@@ -359,7 +359,7 @@
           <p class="news__item-text text">
             “Бюджетирование. Личный бюджет” Вместо вступления… Финансы – это понятие прочно вошло в нашу жизнь. Мы постоянно находимся в финансовых 
           </p>
-          <a href="" class="news__item-btn">Подробнее</a>
+          <a href="#" class="news__item-btn">Подробнее</a>
         </div>
       </div>
     </div>
@@ -374,12 +374,13 @@
           <input type="text" class="form__input" placeholder="Ваш email" >
           <textarea class="form__input form__input-big" placeholder="Вашe сообщение"></textarea>
         </div>
-        <button type="submit" class="form__btn submit" disabled="" value="Отправить" name="submit">Подробнее</button>
+        <button type="submit" name="submit" class="form__btn submit" disabled="" value="Отправить" >Подробнее</button>
         <div class="form__submit-input">
           <div class="g-recaptcha" data-sitekey="6LeKaREUAAAAALB6Sgjp5XqHq0Kb_aLEn_KORz6u"></div>
           <div class="submit__inner">
-            <input type="checkbox" id="politics" onclick="check();" value="" autocomplete="off">
-          Нажимая на кнопку "Отправить заказ", я даю <a href="ссылка на страницу согласия"> согласие на обработку персональных данных.</a>
+            <input type="checkbox" id="politics" onclick="check();" value="" autocomplete="off"/>
+              Нажимая на кнопку "Отправить заказ", я даю 
+              <a href="#"> согласие на обработку персональных данных.</a>
           </div>
         </div>
       </form>
