--- a/app/app/app/article.html
+++ b/app/app/app/article.html
@@ -18,14 +18,12 @@
       <div class="header__burger-inner">
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
-        <a href="" class="header__text">
-          <h3 class="header__title ">
-            Семейный портал
-          </h3>
-          <p class="header__subtitle ">
-            Республика Мордовия
-          </p>
-        </a>
+          <div class="header__items__inner">
+            <div class="header__items">
+              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+            </div>
+            <input type="text" class="header__search-input" placeholder="Искать">
+          </div>
         <div class="header__nav-inner">
           <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
         </div>
@@ -48,12 +46,15 @@
             <a href="template.html" class="header__photos-item" ><img src="img/header-photo-3.png" alt="Фонд президентских грантов"></a>
             <a href="article.html" class="header__photos-item" ><img src="img/header-photo-4.png" alt="Сохрани жизнь"></a>
           </div>
-          <div class="header__items__inner">
-            <div class="header__items">
-              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
-            </div>
-            <input type="text" class="header__search-input" placeholder="Искать">
-          </div>
+          
+          <a href="#" class="header__text">
+            <h3 class="header__title ">
+              Семейный портал
+            </h3>
+            <p class="header__subtitle ">
+              Республика Мордовия
+            </p>
+          </a>
         </div>
       </div>
       <div class="header__inner">
