--- a/app/app/app/index.html
+++ b/app/app/app/index.html
@@ -20,14 +20,12 @@
       <div class="header__burger-inner">
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
-        <a href="#" class="header__text">
-          <h3 class="header__title ">
-            Семейный портал
-          </h3>
-          <p class="header__subtitle ">
-            Республика Мордовия
-          </p>
-        </a>
+          <div class="header__items__inner">
+            <div class="header__items">
+              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+            </div>
+            <input type="text" class="header__search-input" placeholder="Искать">
+          </div>
         <div class="header__nav-inner">
           <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
         </div>
@@ -50,12 +48,15 @@
             <a href="template.html" class="header__photos-item" ><img src="img/header-photo-3.png" alt="Фонд президентских грантов"></a>
             <a href="article.html" class="header__photos-item" ><img src="img/header-photo-4.png" alt="Сохрани жизнь"></a>
           </div>
-          <div class="header__items__inner">
-            <div class="header__items">
-              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
-            </div>
-            <input type="text" class="header__search-input" placeholder="Искать">
-          </div>
+          
+          <a href="#" class="header__text">
+            <h3 class="header__title ">
+              Семейный портал
+            </h3>
+            <p class="header__subtitle ">
+              Республика Мордовия
+            </p>
+          </a>
         </div>
       </div>
       <div class="header__inner">
@@ -100,7 +101,7 @@
       </div>
       <div class="slider__item slider__item-2 animate__animated animate__fadeIn wow"  data-animation="fadeIn" data-delay="3.5s"  style="background-image: url(img/slider-img-2.jpg);">
         <div class="slider__inner ">
-          <div class="slider-text">
+          <div class="slider__text">
             <h3 class="slider__subtitle subtitle animate__animated animate__fadeIn wow " class="animate__fadeIn" data-wow-duration="4s">Семейная политика:</h3>
             <h2 class="slider__title title animate__animated animate__fadeInRight wow " class="animate__fadeIn" data-wow-duration="4s">Многодетная семья в тренде!</h2>
           </div>
@@ -374,12 +375,12 @@
           <input type="text" class="form__input" placeholder="Ваш email" >
           <textarea class="form__input form__input-big" placeholder="Вашe сообщение"></textarea>
         </div>
-        <button type="submit" name="submit" class="form__btn submit" disabled="" value="Отправить" >Подробнее</button>
+        <input type="submit" name="submit" class="form__btn submit" disabled="" value="Отправить" />
         <div class="form__submit-input">
           <div class="g-recaptcha" data-sitekey="6LeKaREUAAAAALB6Sgjp5XqHq0Kb_aLEn_KORz6u"></div>
           <div class="submit__inner">
             <input type="checkbox" id="politics" onclick="check();" value="" autocomplete="off"/>
-              Нажимая на кнопку "Отправить заказ", я даю 
+              Нажимая на кнопку "Отправить", я даю 
               <a href="#"> согласие на обработку персональных данных.</a>
           </div>
         </div>
