--- a/app/app/app/app/template.html
+++ b/app/app/app/app/template.html
@@ -18,26 +18,33 @@
       <div class="header__burger-inner">
         <div class="header__logo-inner">
           <a href="index.html" class="header__logo"><img src="img/logo.png" alt="" class="header__logo"></a>
-          <div class="header__items__inner">
-            <div class="header__items">
-              <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+          <div class="header-righr-inner">
+            <div class="header__items__inner">
+              <div class="header__items">
+                <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
+              </div>
+              <div class="header__search-input">
+                <form>
+                <input type="text" placeholder="Искать здесь...">
+                <button type="submit"></button>
+                </form>
+              </div>
             </div>
-            <input type="text" class="header__search-input" placeholder="Искать">
+          <div class="header__nav-inner">
+            <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
           </div>
-        <div class="header__nav-inner">
-          <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
-        </div>
-        <div class="header__burger-partners-inner">
-          <div class="header__burger-partners">
-            <h6 class="header__burger-partners-title">
-              Партнёры
-            </h6>
+          <div class="header__burger-partners-inner">
+            <div class="header__burger-partners">
+              <h6 class="header__burger-partners-title">
+                Главное
+                меню
+              </h6>
+            </div>
+            <div class="header__burger-burger">
+              <span></span>
+            </div>
           </div>
-          <div class="header__burger-burger">
-            <span></span>
           </div>
-        </div>
-        
         </div>
         <div class="header__burger-hide">
           <div class="header__photos">
@@ -80,7 +87,12 @@
             <div  class="header__search"><img src="img/serch.png" alt="искать"></div>
             <div href="#" class="header__eye bvi-open"  ><img src="img/eye.png" alt=""></div>
           </div>
-          <input type="text" class="header__search-input" placeholder="Искать">
+          <div class="header__search-input">
+            <form>
+            <input type="text" placeholder="Искать здесь...">
+            <button type="submit"></button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
