--- a/app-bar/index.html
+++ b/app-bar/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/fontawesome1/fontawesome/all.min.css">
   <script 
-    src="https://api-maps.yandex.ru/2.1/?apikey=e1a0f728-dca2-48e3-ad0c-9baba0d66aa1&lang=ru_RU" type="text/javascript">
+    src="https://api-maps.yandex.ru/2.1/?apikey=e1a0f728-dca2-48e3-ad0c-9baba0d66aa1&lang=ru_RU" >
   </script>
 </head>
 <body>
@@ -332,7 +332,7 @@
              уникальным продуктам.  
           </p>
         </div>
-        <img src="img/about-img.jpg" class="about__img"></img>
+        <img  alt="gg"  src="img/about-img.jpg" class="about__img"/>
       </div>
     </div>
   </section>
@@ -344,7 +344,7 @@
       </h2>
       <div class="work__inner">
         <div class="work__item">
-          <img src="img/work-1.svg" class="work__item-img">
+          <img alt="work" src="img/work-1.svg" class="work__item-img">
           <div class="work__item-descr">
             <div class="work__item-number">1</div>
             <div class="work__item-chooce">
@@ -358,7 +358,7 @@
           </div>
         </div>
         <div class="work__item">
-          <img src="img/work-2.svg" class="work__item-img">
+          <img alt="gg"  src="img/work-2.svg" class="work__item-img">
           <div class="work__item-descr">
             <div class="work__item-number">2</div>
             <div class="work__item-chooce">
@@ -372,7 +372,7 @@
           </div>
         </div>
         <div class="work__item">
-          <img src="img/work-3.svg" class="work__item-img">
+          <img alt="gg" src="img/work-3.svg" class="work__item-img">
           <div class="work__item-descr">
             <div class="work__item-number">3</div>
             <div class="work__item-chooce">
