--- a/app-fam/index.html
+++ b/app-fam/index.html
@@ -381,7 +381,7 @@
   <section class="form" style="background-image: url(img/form-bg.jpg);">
     <h2 class="form__title title wow animate__animated animate__fadeInLeft " data-wow-duration="2s">Задать вопрос специалисту</h2>
     <div class="form__container container">
-      <form action="#" method="#" class="form__form">
+      <form action="#" method="get" class="form__form">
         <div class="form__inner">
           <input type="text" class="form__input" placeholder="Ваше имя" >
           <input type="text" class="form__input" placeholder="Ваш телефон" >
