--- a/app-ph/index.html
+++ b/app-ph/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
-  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 </head>
 <body>
   <div class="header-img-main">
@@ -50,19 +50,19 @@
             <div class="head__slider-inner">
               <div class="head__slider-container ">
                 <div class="head__slider-track">
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="img/header-img.jpg" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="img/header-img-3.jpg" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="img/header-img-3.jpg" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="img/header-img.jpg" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>
-                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img"src="" alt=""></div>            
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="img/header-img.jpg" alt=""></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="img/header-img-3.jpg" alt=""></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="img/header-img-3.jpg" alt=""></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="img/header-img.jpg" alt=""></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>
+                  <div class="head__slider-item animate__fadeIn animate__animated wow " data-wow-duration=".9s"><img class="head__img" src="#" alt="gg"></div>            
                 </div>
               </div>
             </div>
@@ -85,10 +85,10 @@
   <section class="attainments">
     <div class="container">
       <h6 class="attainments__subtitle subtitle">attainments</h6>
-      <h3 class="attainments__title title">What can a do for you</h3>
+      <h2 class="attainments__title title">What can a do for you</h2>
       <div class="attainments__items">
         <div class="attainments__item">
-          <img class="attainments__photo" src="img/photo-camera.svg" alt="" >
+          <img class="attainments__photo" src="img/photo-camera.svg" alt="gg" >
           <h6 class="attainments__item-title">Photo shooting</h6>
           <p class="attainments__item-text">
             I take professional photos from 
@@ -97,7 +97,7 @@
           </p>
         </div>
         <div class="attainments__item">
-          <img class="attainments__photo" src="img/video-camera.svg" alt="" >
+          <img class="attainments__photo" src="img/video-camera.svg" alt="gg" >
           <h6 class="attainments__item-title">Video shooting</h6>
           <p class="attainments__item-text">
             Professional shooting of clips,
@@ -106,7 +106,7 @@
           </p>
         </div>
         <div class="attainments__item">
-          <img class="attainments__photo" src="img/photography.svg" alt="" >
+          <img class="attainments__photo" src="img/photography.svg" alt="gg" >
           <h6 class="attainments__item-title">Retouch</h6>
           <p class="attainments__item-text">
             Processing photos and videos.
@@ -114,7 +114,7 @@
             your projects</p>
         </div>
         <div class="attainments__item">
-          <img class="attainments__photo" src="img/microphone (3).svg" alt="" >
+          <img class="attainments__photo" src="img/microphone.svg" alt="gg" >
           <h6 class="attainments__item-title">Sound porduction</h6>
           <p class="attainments__item-text">
             Recording audio to a Studio 
@@ -127,8 +127,8 @@
   <div class="story-img">
     <section class="story">
       <div class="container">
-        <div class="story__subtitle subtitle">Personality</div>
-        <div class="story__title title">My story</div>
+        <h6 class="story__subtitle subtitle">Personality</h6>
+        <h2 class="story__title title">My story</h2>
         <div class="story__inner">
             <div class="story__texts">
               <p class="story__text">
@@ -158,7 +158,7 @@
     <div class="containe">
       <div class="portfolio__inner">
         <h6 class="portfolio__subtitle subtitle">Personality</h6>
-        <h3 class="portfolio__title title">Portfolio</h3>
+        <h2 class="portfolio__title title">Portfolio</h2>
         <div class="portfolio__menu">
           <a href="#" class="portfolio__menu-links portfolio__menu-links--active">all</a>
           <a href="#" class="portfolio__menu-links">portrait</a>
@@ -167,7 +167,7 @@
           <a href="#" class="portfolio__menu-links">Experience</a>
         </div>
         <div class="portfolio__items">
-          <div div class="portfolio__item portfolio__item-1" style="background-image: url(img/71c08a56166273.59a3bb113ff2a.jpg);">
+          <div  class="portfolio__item portfolio__item-1" style="background-image: url(img/71c08a56166273.59a3bb113ff2a.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -178,7 +178,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-1" style="background-image: url(img/23deb329614331.55fb14dfef0e9.jpg);">
+          <div  class="portfolio__item portfolio__item-1" style="background-image: url(img/23deb329614331.55fb14dfef0e9.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -189,7 +189,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-2" style="background-image: url(img/355c3590437981.5e173cd312789.jpg);">
+          <div  class="portfolio__item portfolio__item-2" style="background-image: url(img/355c3590437981.5e173cd312789.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -200,7 +200,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-2" style="background-image: url(img/dcf90b52546303.591441e509d22.jpg);">
+          <div  class="portfolio__item portfolio__item-2" style="background-image: url(img/dcf90b52546303.591441e509d22.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -211,7 +211,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-1" style="background-image: url(img/47bb65729648.5b6a90ff3e0dd.jpg);">
+          <div  class="portfolio__item portfolio__item-1" style="background-image: url(img/47bb65729648.5b6a90ff3e0dd.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -222,7 +222,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-1" style="background-image: url(img/velizar-ivanov-xZjiUR7SWIQ-unsplash.jpg);">
+          <div  class="portfolio__item portfolio__item-1" style="background-image: url(img/velizar-ivanov-xZjiUR7SWIQ-unsplash.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -233,7 +233,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-1" style="background-image: url(img/3.jpg);">
+          <div  class="portfolio__item portfolio__item-1" style="background-image: url(img/3.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -244,7 +244,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-2" style="background-image: url(img/abaa5191258309.5e2d710b0b3e4.jpg);">
+          <div  class="portfolio__item portfolio__item-2" style="background-image: url(img/abaa5191258309.5e2d710b0b3e4.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -255,7 +255,7 @@
               <button class="portfolio__item-btn">Watch<span><img src="img/right-white.svg" alt=""></span></button>
             </div>
           </div>
-          <div div class="portfolio__item portfolio__item-1" style="background-image: url(img/54d11395480041.5e985d06d026d.jpg);">
+          <div  class="portfolio__item portfolio__item-1" style="background-image: url(img/54d11395480041.5e985d06d026d.jpg);">
             <div class="portfolio__item-inner">
               <h3 class="portfolio__item-title">body language</h3>
               <div class="portfolio__item-descr-inner">
@@ -273,8 +273,8 @@
   </section>
   <section class="prices">
     <div class="container">
-      <div class="prices__subtitle subtitle">hiring</div>
-      <div class="prices__title title">Prices</div>
+      <h2 class="prices__subtitle subtitle">hiring</h2>
+      <h6 class="prices__title title">Prices</h6>
       <div class="prices__items">
         <div class="prices__item">
           <div class="prices__item-inner">
@@ -311,8 +311,8 @@
   </section>
   <section class="blog">
     <div class="container">
-      <div class="blog__subtitle subtitle">Personal</div>
-      <div class="blog__title title">Blog</div>
+      <h6 class="blog__subtitle subtitle">Personal</h6>
+      <h2 class="blog__title title">Blog</h2>
       <div class="blog__inner">
         <div class="blog__items">
           <a href="#" class="blog__item">
@@ -353,7 +353,7 @@
     <div class="container">
       <div class="questions__inner">
         <div class="questions__block-1">
-          <h3 class="questions__title title">Have any questions?</h3>
+          <h2 class="questions__title title">Have any questions?</h2>
           <p class="questions__text">
             I'd love to hear from you, so if you like the shots I take,
             share your thoughts with me! Be sure to contact me if you're looking for
@@ -378,7 +378,7 @@
           <div class="questions__block-2-inner">
             <div class="questions__block-2-title">Get in touch:</div>
             <a href="mailto:garry@cooper.com" class="questions__block-2-info">garry@cooper.com</a>
-            <a href="tel: +12139782222" class="questions__block-2-info">+1 (213)-978-2222</a>
+            <a href="tel:+12139782222" class="questions__block-2-info">+1 (213)-978-2222</a>
           </div>
           <div class="questions__block-2-inner">
             <div class="questions__block-2-title">Social</div>
@@ -398,7 +398,7 @@
           <div class="questions__block-2-inner">
             <div class="questions__block-2-title">Get in touch:</div>
             <a href="mailto:garry@cooper.com" class="questions__block-2-info">garry@cooper.com</a>
-            <a href="tel: +12139782222" class="questions__block-2-info">+1 (213)-978-2222</a>
+            <a href="tel:+12139782222" class="questions__block-2-info">+1 (213)-978-2222</a>
           </div>
           <div class="questions__block-2-inner">
             <div class="questions__block-2-title">Social</div>
