--- a/app-dn/index.html
+++ b/app-dn/index.html
@@ -248,7 +248,7 @@
           </p>
         </div>
         <div class="slider__items">
-          <div class="slider__item" style="background-image: url(img/Thesecond.png);">
+          <div class="slider__item" style="background-image: url(img/TheSecond.png);">
             <h5 class="slider__type">Strawberry</h5>
             <p class="slider__price">5$</p>
             <a href="#" class="slider__btn" >Add to box</a>
