--- a/app-dn/index.html
+++ b/app-dn/index.html
@@ -253,7 +253,7 @@
             <p class="slider__price">5$</p>
             <a href="#" class="slider__btn" >Add to box</a>
           </div>
-          <div class="slider__item" style="background-image: url(img/Thefourth.png);">
+          <div class="slider__item" style="background-image: url(img/TheFourth.png);">
             <h5 class="slider__type">Chocolate</h5>
             <p class="slider__price">7$</p>
             <a href="#" class="slider__btn" >Add to box</a>
@@ -263,12 +263,12 @@
             <p class="slider__price">5$</p>
             <a href="#" class="slider__btn" >Add to box</a>
           </div>
-          <div class="slider__item" style="background-image: url(img/Thesecond.png);">
+          <div class="slider__item" style="background-image: url(img/TheSecond.png);">
             <h5 class="slider__type">Strawberry</h5>
             <p class="slider__price">5$</p>
             <a href="#" class="slider__btn" >Add to box</a>
           </div>
-          <div class="slider__item" style="background-image: url(img/Thefourth.png);">
+          <div class="slider__item" style="background-image: url(img/TheFourth.png);">
             <h5 class="slider__type">Chocolate</h5>
             <p class="slider__price">7$</p>
             <a href="#" class="slider__btn" >Add to box</a>
