--- a/app-ph/index.html
+++ b/app-ph/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+  <link rel="stylesheet" href="css/fontawesome1/fontawesome/all.min.css">
 </head>
 <body>
   <div class="header-img-main">
