--- a/app-dn/index.html
+++ b/app-dn/index.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="css/fontawesome1/fontawesome/all.min.css">
   <link rel="stylesheet" href="css/style.min.css">
+  
+
 </head>
 <body>
   <div class="cart">
