--- a/app-port/index.html
+++ b/app-port/index.html
@@ -30,7 +30,7 @@
     </div>
   </section>
   <section class="portfolio">
-    <div class="containe">
+    <div class="container">
       <div class="portfolio__inner">
         <h2 class="portfolio__title title">Portfolio</h2>
         <div class="portfolio__menu">
@@ -58,7 +58,7 @@
           </div>
           <div  class="portfolio__item portfolio__item-2" style="background-image: url(img/fam.png);">
             <div class="portfolio__item-inner">
-              <h3 class="portfolio__item-title">Landing page</h3>
+              <h3 class="portfolio__item-title">Family portal</h3>
               <div class="portfolio__item-descr-inner">
                 <div class="portfolio__item-descr"><span class="portfolio__item-descr-type">The site was made for:</span></div>
               </div>
